# website-cloner-basic

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
frontend/src/app/: page.tsx
frontend/src/app/results/: page.tsx
